Samedi matin OK

--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -207,7 +207,7 @@
 							<div class="parent grid-item--height4">
 								<div class="enfant" style="display: flex;align-items: center;">
 									<img src="orateurs/keynoter-emilie-esposito.jpg" style="height:8rem"/>
-									<h3>Keynote #3 : Emilie ESPOSITO</h3>
+									<h3>Keynote #3<br/><br/>Emilie ESPOSITO</h3>
 								</div>
 							</div>
 						</a>
@@ -265,12 +265,14 @@
 					<div>
 						<div class="debut heure">10h50</div>
 						<div class="salle heure">S1</div>
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-a-playful-approach-to-collective-performance">
 						<div class="parent grid-item--height6">
 							<div class="enfant">
-								<h3>Thiagi</h3>
+								<h3>A Playful Approach to Collective Performance</h3>
 								<p>THIAGI</p>
 							</div>
 						</div>
+						</a>
 						<div class="fin heure">12h40</div>
 					</div>
 				</div>
@@ -319,11 +321,11 @@
 						<div class="fin heure">12h40</div>
 					</div>
 				</div>
-				<div class="grid-item grid-item--height6 c6 AM2 RE" style="position: absolute; left: 82.9967%; top: 442px; opacity: 1; width: 16.4%;">
+				<div class="grid-item grid-item--height6 c6 AM2 AJ" style="position: absolute; left: 82.9967%; top: 442px; opacity: 1; width: 16.4%;">
 					<div>
 						<div class="debut heure">10h50</div>
 						<div class="salle heure">S5</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/dessine-les-supers-pouvoirs-d-un-chevalier">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-dessine-les-supers-pouvoirs-d-un-chevalier">
 							<div class="parent grid-item--height6">
 								<div class="enfant">
 									<h3>Dessine les super-pouvoirs d'un chevalier</h3>
@@ -342,7 +344,7 @@
 					<div>
 						<div class="debut heure">11h50</div>
 						<div class="salle heure">GC</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/comment-reduire-soi-meme-sa-dette-emotionnelle-pour-mieux-collaborer-en-equipe">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-comment-reduire-soi-meme-sa-dette-emotionnelle-pour-mieux-collaborer-en-equipe">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Comment réduire soi-même sa dette émotionnelle pour mieux collaborer en équipe ?</h3>
@@ -353,11 +355,11 @@
 						<div class="fin heure">12h40</div>
 					</div>
 				</div>
-				<div class="grid-item grid-item--height3 c4 AM3 RE" style="position: absolute; left: 49.798%; top: 604px; opacity: 1; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.002px, 0px, 0px);">
+				<div class="grid-item grid-item--height3 c4 AM3 CF" style="position: absolute; left: 49.798%; top: 604px; opacity: 1; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.002px, 0px, 0px);">
 					<div>
 						<div class="debut heure">11h50</div>
 						<div class="salle heure">S3</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/design-thinking-ux-design-sprint-et-si-diffusait-une-culture-de-design">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-design-thinking-ux-design-sprint-et-si-diffusait-une-culture-de-design">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Design Thinking, UX, Design Sprint... Et si on diffusait une culture de Design ?</h3>
@@ -395,7 +397,7 @@
 							<div class="parent grid-item--height4">
 								<div class="enfant" style="display: flex;align-items: center;">
 									<img src="orateurs/keynoter-thiagi.jpg" style="height:8rem"/>
-									<h3>Keynote #4 : THIAGI</h3>
+									<h3>Collective Performance is Interactive Performance<br/><br/>THIAGI</h3>
 								</div>
 							</div>
 						</a>
@@ -749,7 +751,7 @@
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
-						<h2>Keynote #3 : Emilie Esposito</h2>
+						<h2>Keynote #3 - Emilie Esposito</h2>
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
@@ -850,6 +852,54 @@
 		</div>
 	</div>
 
+	<div class="modal fade" id="modal-a-playful-approach-to-collective-performance" tabindex="-1" role="dialog" aria-labelledby="#modal-a-playful-approach-to-collective-performance-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>A Playful Approach to Collective Performance</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier / Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						This is a hands-on workshop for Scrum Masters, consultants, and trainers that helps you achieve these objectives:
+						<br/>
+						1. Use interactive experiential techniques to provide effective training to different participants on different topics.
+						<br/>
+						2. Use interactive experiential techniques to facilitate teamwork in such areas as idea generation, evaluation and selection, design thinking, and problem solving.
+						<br/>
+						3. Adapt flexible templates to design hundreds of training and teamwork activities.
+						<br/>
+						4. Implement facilitation techniques to produce valuable results from your teams.
+						<br/>
+						As a part of the workshop, you will have access to a website (in French and English) with hundreds of training and teamwork activities.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/keynoter-thiagi.jpg" style="height:8rem"/>
+						Thiagi
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Dr. Sivasailam “Thiagi” Thiagarajan is the founder and Resident Mad Scientist at The Thiagi Group, an organization with the mission of helping people improve their performance effectively and enjoyably.
+						<br/>
+						Thiagi served as the editor of ISPI’s Performance & Instruction for more than 10 years. He has written a monthly GameLetter for 15 years; it currently appears as the GameBlog on this website.
+						<br/>
+						Thiagi has twice been elected the president of the International Society for Performance Improvement (ISPI), 27 years apart (in 1979 and 2006). He has also been the five-time president of the North American Simulation and Gaming Association (NASAGA).
+						<br/>
+						As a global nomad, Thiagi has lived in three different countries and has conducted training workshops in 21 others. Earlier in his life, he has been a high-school science teacher, street corner magician, researcher, editor of a professional journal, keynote speaker, college professor, USAID project director, and writer.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="modal fade" id="modal-le-defi-collaboratif-lego-testez-votre-agilite-collective" tabindex="-1" role="dialog" aria-labelledby="#modal-le-defi-collaboratif-lego-testez-votre-agilite-collective-label"
 		 aria-hidden="true">
 		<div class="modal-dialog modal-lg" role="document">
@@ -915,7 +965,6 @@
 					<p style="text-align: justify">
 						Camille Richer, 27 ans, je suis professeur de sport diplômé de l'INSEP (PSHN) détaché auprès de la fédération française de Canoë Kayak en tant que Conseillé Technique Régional. En parallèle, je poursuis ma carrière d'entraineur/joueur de kayak polo au Club de Saint-Grégoire au plus haut niveau. J'accompagne également les athlètes de ma fédération dans leurs préparations physiques et mentales toutes disciplines confondues.
 					</p>
-					<hr/>
 				</div>
 			</div>
 		</div>
@@ -941,9 +990,15 @@
 					</p>
 					<br/>
 					<hr/>
-					<div>
+					<div style="display: flex; align-items: center">
 						<img src="orateurs/alexandrine-apolline.jpeg" style="height:8rem"/>
-						Alexandrine Barbieux (XX ans) & Apolline Loubradou (17 ans) - Mère & Fille
+						<div class="m-2">
+							Alexandrine Barbieux (XX ans) & Apolline Loubradou (17 ans)
+							<br/>
+							Mère & Fille
+							<br/>
+							<a href="https://www.facebook.com/FamilleLiberee/">https://www.facebook.com/FamilleLiberee/</a>
+						</div>
 					</div>
 					<br/>
 					<p style="text-align: justify">
@@ -956,13 +1011,121 @@
 		</div>
 	</div>
 
+	<div class="modal fade" id="modal-dessine-les-supers-pouvoirs-d-un-chevalier" tabindex="-1" role="dialog" aria-labelledby="#modal-dessine-les-supers-pouvoirs-d-un-chevalier-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Dessine les super pouvoirs d’un chevalier</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier/Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Tu connais la pensée visuelle ? et les accords Toltèques ? et le rapport entre les 2 ??? ça a l’air compliqué n’est-ce pas ? Tu sais que, avec la pensée visuelle, on peut représenter  nos idées en dessins, et ça nous aide à mieux comprendre. Et les accords Toltèques ce sont des petites règles pour apprendre à utiliser nos super pouvoirs, oui on est tous des super héros ;) .
+						<br/><br/>
+						Dans cet atelier on va s’amuser à faire des supers dessins très facilement, on va écouter une histoire de chevaliers et nous allons la dessiner ensemble.
+					</p>
+					<br/>
+					<hr/>
+					<div>
+						<img src="orateurs/fany.jpg" style="height:8rem"/>
+						Fany Berthelot - <a href="https://www.twitter.com/Fanyberthelot">@Fanyberthelot</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Analyste fonctionnelle et maman de 3 enfants, je suis convaincue de l’efficacité des illustrations pour  transmettre un message en racontant une histoire. Au travail comme à la maison je pratique  la facilitation graphique dans mon quotidien depuis plus de 2 ans.
+						<br/>
+						Au travail pour analyser et synthétiser un besoin utilisateur, faciliter les échanges et faire émerger des idées. A la maison pour apprendre les leçons  avec les enfants et l’organisation de la famille.
+						<br/>
+						J’organise et anime des ateliers sur la facilitation graphique, j’ai participé à Agile Tours Rennes 2018 et Agile Laval 2019.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-comment-reduire-soi-meme-sa-dette-emotionnelle-pour-mieux-collaborer-en-equipe" tabindex="-1" role="dialog" aria-labelledby="#modal-comment-reduire-soi-meme-sa-dette-emotionnelle-pour-mieux-collaborer-en-equipe-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Comment réduire soi-même sa dette émotionnelle pour mieux collaborer en équipe?</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Dans ma conférence “Comment réduire la dette émotionnelle dans une équipe Scrum”, j’ai partagé mon expérience pour traiter l’accumulation de problèmes humains dans une équipe, que j’appelle la dette émotionnelle dans une équipe.
+						<br/>
+						Aujourd'hui, je propose de partager de nouveau mon expérience et mes techniques à tout individu souhaitant réduire sa propre dette émotionnelle, sans l’aide de personne. Pourquoi est-ce utile? Quand on est frustré ou en colère, comment accueillir un feedback négatif sans le prendre comme une attaque? Comment réussir à faire un feedback négatif à l’autre quand on n’ose pas? Etre capable de réduire sa propre dette émotionnelle de manière autonome, c’est un moyen de mieux collaborer au sein d’une équipe agile, en osant s’exprimer quand c’est nécessaire et en étant capable d’entendre n’importe quel type de message pour le bien être du collectif. Et en bonus, on se sent mieux ensuite au travail, croyez moi.
+					</p>
+					<br/>
+					<hr/>
+					<div>
+						<img src="orateurs/marilyn-kol.jpg" style="height:8rem"/>
+						Marilyn Kol - <a href="https://www.twitter.com/Mari7yn">@Mari7yn</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Je m’appelle Marilyn KOL. J’évolue depuis une quinzaine d’années dans le monde IT. J’ai été développeuse, chef de projet puis Scrum Master.
+						<br/>
+						Aujourd’hui, je m’épanouie en tant que Coach Agile et Coach Professionnel.
+						<br/><br/>
+						Ces différentes casquettes font écho à mes passions qui sont l’accompagnement individuel et d’équipes, et l’agilité.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-design-thinking-ux-design-sprint-et-si-diffusait-une-culture-de-design" tabindex="-1" role="dialog" aria-labelledby="#modal-design-thinking-ux-design-sprint-et-si-diffusait-une-culture-de-design-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Design Thinking, UX, Design Sprint... Et si on diffusait une culture de Design ?</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						UX, Design Thinking, Interaction Sprint… Tous ces concepts sont très en vogue ! Qu’est ce qui se cache derrière ?
+						Il y a un mouvement plus large, une Culture du Design, qui irrigue beaucoup d’entreprises, de collectivités et de secteurs d’activités…
+						Nous tenterons d’en définir les contours et nous en verrons les bénéfices sur des cas concrets. Et en bonus, quelques pistes pour diffuser cette culture, complémentaire de l’Agilité, dans votre organisation !
+					</p>
+					<br/>
+					<hr/>
+					<div>
+						Matthieu Gioani
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="modal fade" id="modal-keynote-thiagi" tabindex="-1" role="dialog" aria-labelledby="#modal-keynote-thiagi"
 		 aria-hidden="true">
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
-						<h2>Keynote #4 : Thiagi</h2>
+						<h2>Collective Performance is Interactive Performance - Thiagi</h2>
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
@@ -971,18 +1134,25 @@
 						<div style="margin-left:1rem">Keynote</div>
 					</div>
 					<hr/>
-					<div style="display: flex;align-items: center">
+					<p style="text-align: justify">
+						In this “walk-the-talk” session, Thiagi will demonstrate a series of jolts (short interactive activities) to persuade you to plagiarize and adapt them in your professional and personal activities. Experience these jolts and observe how they are directly relevant to Thiagi’s topics and the conference theme. Learn to use a similar approach to improve the performance of your team.
+					</p>
+					<br/>
+					<hr/>
+					<div>
 						<img src="orateurs/keynoter-thiagi.jpg" style="height:8rem"/>
-						<div class="m-2" style="text-align: justify">
-							Dr. Sivasailam “Thiagi” Thiagarajan is the founder and Resident Mad Scientist at The Thiagi Group, an organization with the mission of helping people improve their performance effectively and enjoyably.
-							<br/>
-							Thiagi served as the editor of ISPI’s Performance & Instruction for more than 10 years. He has written a monthly GameLetter for 15 years; it currently appears as the GameBlog on this website.
-							<br/>
-							Thiagi has twice been elected the president of the International Society for Performance Improvement (ISPI), 27 years apart (in 1979 and 2006). He has also been the five-time president of the North American Simulation and Gaming Association (NASAGA).
-							<br/>
-							As a global nomad, Thiagi has lived in three different countries and has conducted training workshops in 21 others. Earlier in his life, he has been a high-school science teacher, street corner magician, researcher, editor of a professional journal, keynote speaker, college professor, USAID project director, and writer.
-						</div>
+						Thiagi
 					</div>
+					<br/>
+					<p style="text-align: justify">
+						Dr. Sivasailam “Thiagi” Thiagarajan is the founder and Resident Mad Scientist at The Thiagi Group, an organization with the mission of helping people improve their performance effectively and enjoyably.
+						<br/>
+						Thiagi served as the editor of ISPI’s Performance & Instruction for more than 10 years. He has written a monthly GameLetter for 15 years; it currently appears as the GameBlog on this website.
+						<br/>
+						Thiagi has twice been elected the president of the International Society for Performance Improvement (ISPI), 27 years apart (in 1979 and 2006). He has also been the five-time president of the North American Simulation and Gaming Association (NASAGA).
+						<br/>
+						As a global nomad, Thiagi has lived in three different countries and has conducted training workshops in 21 others. Earlier in his life, he has been a high-school science teacher, street corner magician, researcher, editor of a professional journal, keynote speaker, college professor, USAID project director, and writer.
+					</p>
 				</div>
 			</div>
 		</div>
