--- a/programme/vendredi.html
+++ b/programme/vendredi.html
@@ -206,7 +206,7 @@
 							<div class="parent grid-item--height4">
 								<div class="enfant" style="display: flex;align-items: center;">
 									<img src="orateurs/keynoter-lja.jpg" style="height:8rem"/>
-									<h3>Keynote #1 : LJA</h3>
+									<h3>Keynote #1<br/><br/>LJA</h3>
 								</div>
 							</div>
 						</a>
@@ -413,7 +413,7 @@
 							<div class="parent grid-item--height4">
 								<div class="enfant" style="display: flex;align-items: center;">
 									<img src="orateurs/keynoter-frederic-leguedois.jpg" style="height:8rem"/>
-									<h3>Keynote #2 : Frédéric LEGUÉDOIS</h3>
+									<h3>Keynote #2<br/><br/>Frédéric LEGUÉDOIS</h3>
 								</div>
 							</div>
 						</a>
@@ -755,7 +755,7 @@
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
-						<h2>Keynote #1 : LJA</h2>
+						<h2>Keynote #1 - LJA</h2>
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
@@ -1221,7 +1221,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
-						<h2>Keynote #2 : Frédéric Leguédois</h2>
+						<h2>Keynote #2 - Frédéric Leguédois</h2>
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
