Keynote Emilie Esposito OK

--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -207,7 +207,7 @@
 							<div class="parent grid-item--height4">
 								<div class="enfant" style="display: flex;align-items: center;">
 									<img src="orateurs/keynoter-emilie-esposito.jpg" style="height:8rem"/>
-									<h3>Keynote #3<br/><br/>Emilie ESPOSITO</h3>
+									<h3>Manuel d'anti-sabotage<br/><br/>Emilie ESPOSITO</h3>
 								</div>
 							</div>
 						</a>
@@ -751,7 +751,7 @@
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
-						<h2>Keynote #3 - Emilie Esposito</h2>
+						<h2>Manuel d'anti-sabotage - Emilie Esposito</h2>
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
@@ -760,16 +760,27 @@
 						<div style="margin-left:1rem">Keynote</div>
 					</div>
 					<hr/>
-					<div style="display: flex;align-items: center">
+					<p style="text-align: justify">
+						Quel est le rapport entre CIA, sabotage et manifeste agile ?
+						<br/><br/>
+						Vous avez l’impression que votre entreprise vous empêche d’être efficace, et cela vous démotive ?
+<br/><br/>
+						Le manuel d’anti-sabotage vous apportera des techniques concrètes, applicables par tous. Agissez au quotidien pour rendre votre entreprise plus performante et plus épanouissante.
+					</p>
+					<br/>
+					<hr/>
+					<div>
 						<img src="orateurs/keynoter-emilie-esposito.jpg" style="height:8rem"/>
-						<div class="m-2" style="text-align: justify">
-							Depuis 12 ans, je développe mon agilité. J’ai d’abord été scrum master, product owner et coach agile dans des contextes Scrum. L’expérience m’a montré qu’une équipe ne pouvait tirer les fruits de l’agilité que si le système autour de l’équipe était agile aussi. Peu à peu, je suis passée du côté obscur des agilistes : les partisans du #noframework, qui parlent de culture agile plus que de déploiement de méthodes agiles.
-							<br/>
-							Dans les équipes que j’ai accompagnées, j’ai trop souvent observé la souffrance au travail : décalage entre le discours managérial et la réalité du quotidien, processus lourds et inadaptés, imposés par des décisions top-down, déshumanisation du travail… Et cette souffrance était souvent accentuée par les « transformations agiles » menées par les entreprises. Ces mêmes transformations agiles censées remettre l’humain au centre…
-							<br/>
-							J’ai créé Peps pour lutter à mon échelle. Je veux contribuer à construire le monde du travail de demain, où performance rime avec épanouissement. Et je suis convaincue que la culture agile permet d’améliorer la performance des entreprises tout en créant un cadre propice à l’épanouissement des collaborateurs.
-						</div>
+						Emilie Esposito
 					</div>
+					<br/>
+					<p style="text-align: justify">
+						Depuis 12 ans, je développe mon agilité. J’ai d’abord été scrum master, product owner et coach agile dans des contextes Scrum. L’expérience m’a montré qu’une équipe ne pouvait tirer les fruits de l’agilité que si le système autour de l’équipe était agile aussi. Peu à peu, je suis passée du côté obscur des agilistes : les partisans du #noframework, qui parlent de culture agile plus que de déploiement de méthodes agiles.
+						<br/>
+						Dans les équipes que j’ai accompagnées, j’ai trop souvent observé la souffrance au travail : décalage entre le discours managérial et la réalité du quotidien, processus lourds et inadaptés, imposés par des décisions top-down, déshumanisation du travail… Et cette souffrance était souvent accentuée par les « transformations agiles » menées par les entreprises. Ces mêmes transformations agiles censées remettre l’humain au centre…
+						<br/>
+						J’ai créé Peps pour lutter à mon échelle. Je veux contribuer à construire le monde du travail de demain, où performance rime avec épanouissement. Et je suis convaincue que la culture agile permet d’améliorer la performance des entreprises tout en créant un cadre propice à l’épanouissement des collaborateurs.
+					</p>
 				</div>
 			</div>
 		</div>
