Correction bug vendredi soir et ajout infos speakers vendredi

--- a/programme/vendredi.html
+++ b/programme/vendredi.html
@@ -1204,12 +1204,42 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 					</p>
 					<hr/>
 					<div>
-						Marion Bréan
+						<img src="orateurs/marion-brean.jpg" style="height:8rem"/>
+						Marion Bréan - <a href="https://twitter.com/BreanMarion">@BreanMarion</a>
 					</div>
+					<br/>
+					<p style="text-align: justify">
+						Mon rêve c'était de devenir vétérinaire. Mais le destin en a décidé autrement et j'ai intégré l'Institut National Supérieur des sciences agronomique, de l'environnement et de l'alimentation de Dijon où j'obtiens mon diplôme d'ingénieur en agronomie en 2015.
+						<br/>
+						J'ai intégré la Cooperl en mars de cette même année pour y réaliser mon mémoire de fin d'étude.
+						<br/>
+						A l'issu de ce stage, j'ai été embauchée au sein du service recherche & développement pour lequel j'ai travaillé 2 ans.
+						<br/>
+						Le dernier sujet qui m'a été confié concernait le déploiement d'applications mobile et web (Pass'Porc) en élevage pour le suivi des traitements antibiotiques. Et c'est là que j'ai découvert l'agilité. N'ayant jamais connu le monde informatique, j'ai tout de suite adhéré aux principes de ce cadre de travail.
+						<br/>
+						Après 1 an côté métier, je suis passé côté informatique en tant que product owner. J'ai alors développé une vraie passion pour les post-it et les rétrospectives déguisées.
+						<br/>
+						Les mois passent et le projet Pass'Porc a pris de l'ampleur si bien qu'on lui a dédié tout un programme appelé Cooperl Suite.
+						<br/>
+						Et aujourd'hui me voilà responsable de l'équipe informatique de ce programme.
+						<br/>
+						Comme quoi même un cochon peut mener à l'agilité !
+					</p>
 					<hr/>
 					<div>
-						Sylvain Le Mauff
+						<img src="orateurs/sylvain-le-mauff.jpg" style="height:8rem"/>
+						Sylvain Le Mauff - <a href="https://twitter.com/LemauffSylvain">@LemauffSylvain</a>
 					</div>
+					<br/>
+					<p style="text-align: justify">
+						Après des débuts en tant que chef de projet informatique "à l'ancienne", je suis tombé dans le monde de l'agilité il y a une petite dizaine d'année lorsque l'on m'a demandé de travailler sur un sujet en Agile - Scrum avec l'aide d'un gourou agiliste convaincu.
+						<br/>
+						Nouveau pour moi, cela m'a tout de suite fait tilt, des concepts et une idée de la prise en charge des projets qui me parlaient et me convenaient.
+						<br/>
+						Après avoir été Scrum Master dans le monde bancaire, je suis devenu Product Owner dans le monde agro-alimentaire. Devenu responsable d'un programme informatique, j'ai alors pu mettre en oeuvre l'agilité (ou plutôt notre agilité), le management visuel ou encore travailler sur la problématique de l'agilité à l'échelle.
+						<br/>
+						A mon tour convaincu par cette méthode, je mets désormais en place mon expérience au profit des différents sujets qui me sont confiés.
+					</p>
 				</div>
 			</div>
 		</div>
