--- a/programme/vendredi_soir.html
+++ b/programme/vendredi_soir.html
@@ -106,13 +106,21 @@
 					<button class="button AJ" style="opacity: 1;">Atelier / Jeu</button>
 				</div>
 			</div>
+			<div class="input-group telephone" data-filter-group="FiltresTelephone" style="display: none;">
+				<select class="custom-select filter-custom-select" id="inputGroupSelect01" style="height: 2.26rem;">
+					<option>----- Choisissez votre filtre</option>
+					<option value=".c1">Salle 1</option>
+					<option value=".c2">Salle 2</option>
+					<option value=".c3">Salle 3</option>
+				</select>
+			</div>
 		</div>
 	</div>
 	<div class="flex-row">
 		<div class="col-12">
 			<div class="grid" style="position: relative; height: 1686px;"><!-- data-isotope='{ "itemSelector": ".grid-item", "layoutMode": "fitRows" }'-->
 				<div class="grid-sizer"></div>
-				<div class="grid-item  grid-item--width2 grid-item--height1 theme c1" style="position: absolute; left: 0%; top: 0px; width: 33.2%"><h2>Salle 1 de test</h2></div>
+				<div class="grid-item  grid-item--width2 grid-item--height1 theme c1" style="position: absolute; left: 0%; top: 0px; width: 33.2%"><h2>Salle 1</h2></div>
 				<div class="grid-item grid-item--width2 grid-item--height1 theme c2" style="position: absolute; left: 33.2%; top: 0px; width: 33.2%;"><h2>Salle 2</h2></div>
 				<div class="grid-item grid-item--width2 grid-item--height1 theme c3" style="position: absolute; left: 66.4%; top: 0px; width: 33.2%;"><h2>Salle 3</h2></div>
 
